src/components/Sidebar/Sidebar.module.css
.menu {
    position: sticky;
    top: 0;
    width: 300px;
    max-height: 100vh;
    flex-shrink: 0;
    background-color: white;
    border-right: 1px solid #d4d9de;
}

.blockLogo {
    border-bottom: 1px solid #d4d9de;
    margin-bottom: 15px;
}

.logo {
    width: 45%;
    padding: 17px;
}

.menu__item {
    display: flex;
    text-decoration: none;
    font-family: SBSansText, sans-serif;
    font-size: 14px;
    font-weight: 600;
    line-height: 1.5;
    letter-spacing: -0.3px;
    background-color: transparent;
    padding: 10px 20px;
    cursor: pointer;
}

.menu__item:hover {
    background-color: #f8f8f8;
}

.menu__item > span {
    margin-right: 10px;
}

.active {
    color: #09a552 !important;
    background-color: #f8f8f8;
}

.app {
    color: #868d98;
    font-size: 11px;
    font-weight: 100;
    text-transform: uppercase;
    margin-top: 15px;
    pointer-events: none;
}

.addButton {
    color: #868d98 !important;
}

.menuTitle > div {
    background-color: rgba(0, 0, 0, 0.1);
    color: white;
}

.menu :global(.ant-menu.ant-menu-dark) {
    border-radius: 5px;
    background-color: transparent;
    border: 0;
    color: white;
}

.menu :global(.ant-menu-item) {
    height: unset !important;
    min-height: 40px;
    white-space: unset;
    margin: 0 !important;
    padding-left: 0px !important;
    padding-right: 0px;
}

.menu :global(.ant-menu-item::after) {
    border: none;
}

.menu :global(.ant-menu-item:hover) {
    color: black;
}

.menu :global(.ant-menu-item a:hover) {
    color: black;
}

